# levelone-voice-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy_vps.py  package-lock.json  pyproject.toml  status_project.md
.atl/: skill-registry.md
alembic/: env.py
alembic/versions/: 12f7e9ab8c9f_initial_schema_call_sessions_and_call_.py  b436f6e8a91b_add_dashboard_users.py
app/: main.py
app/agent/: context.py  prompt.py  worker.py
app/api/: admin.py  auth.py
app/booking/: calcom.py
app/core/: call_orchestrator.py  config.py  enums.py  logging.py
app/crm/: hubspot.py
app/dashboard/: index.html  playground.html
app/db/: models.py  session.py
app/email/: resend_client.py
app/llm/: router.py
app/stt/: factory.py
app/tts/: factory.py
app/webhook/: router.py
config/: alex_config.yaml  llm_config.yaml  llm_profiles.yaml
config/agent_personas/: classification.txt  email_draft.txt  lead_scoring.txt  summary.txt
config/prompts/: alex_system.txt
docs/: Humanización_de_Agentes_de_Voz.md  credentials_needed.md  prompting-voice-agents-livekit.md  proyecto_levelOne_gent_v2.md
infra/: livekit.yaml  voice-agent.service  voice-webhook.service
scratch/: check_local_users.py  replace_icons.py
tests/unit/: conftest.py  test_analytics.py  test_auth_rbac.py  test_llm_router.py  test_webhook.py
