[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-agent"
version = "0.1.0"
description = "ALEX — AI Voice Agent for LevelOne Agency"
requires-python = ">=3.11"
dependencies = [
    # LiveKit
    "livekit-agents[silero]>=0.11.0",
    "livekit-plugins-openai>=0.10.0",
    "livekit-plugins-cartesia>=0.4.0",
    # Web framework (webhooks + health)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Config
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # LLM clients
    "openai>=1.54.0",
    "groq>=0.11.0",
    # HTTP
    "httpx>=0.27.0",
    # Database
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    # YAML
    "pyyaml>=6.0.2",
    # Logging
    "structlog>=24.4.0",
    # Email
    "resend>=2.4.0",
    # Utils
    "python-dateutil>=2.9.0",
    "tenacity>=9.0.0",
    "cryptography>=42.0.0",  # Ed25519 webhook signature verification (Telnyx)
    "pyjwt>=2.8.0",           # Dashboard JWT authentication
    "asyncpg>=0.30.0",        # PostgreSQL async driver (production DB)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
voice-agent = "app.main:main"
voice-worker = "app.agent.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
